@@ -1,54 +1,20 @@
-// package com.example.demo.config;
-
-// import com.example.demo.model.User;
-// import com.example.demo.repository.UserRepository;
-// import org.springframework.beans.factory.annotation.Autowired;
-// import org.springframework.security.core.userdetails.*;
-// import org.springframework.security.core.authority.SimpleGrantedAuthority;
-// import org.springframework.stereotype.Service;
-
-// import java.util.stream.Collectors;
-
-// @Service
-// public class CustomUserDetailsService implements UserDetailsService {
-
-//     @Autowired
-//     private UserRepository userRepository;
-
-//     @Override
-//     public UserDetails loadUserByUsername(String email)
-//             throws UsernameNotFoundException {
-
-//         User user = userRepository.findByEmail(email)
-//                 .orElseThrow(() ->
-//                         new UsernameNotFoundException("User not found"));
-
-//         return new org.springframework.security.core.userdetails.User(
-//                 user.getEmail(),
-//                 user.getPassword(),
-//                 user.getRoles()
-//                         .stream()
-//                         .map(role -> new SimpleGrantedAuthority(role.name()))
-//                         .collect(Collectors.toSet())
-//         );
-//     }
-// }
 package com.example.demo.security;
 
 import com.example.demo.model.User;
 import com.example.demo.repository.UserRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
-    private final UserRepository userRepository;
-
-    public CustomUserDetailsService(UserRepository userRepository) {
-        this.userRepository = userRepository;
-    }
+    @Autowired
+    private UserRepository userRepository;
 
     @Override
     public UserDetails loadUserByUsername(String email)
@@ -56,23 +22,19 @@ public class CustomUserDetailsService implements UserDetailsService {
 
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() ->
-                        new UsernameNotFoundException("User not found"));
+                        new UsernameNotFoundException("User not found: " + email));
 
-        // return new org.springframework.security.core.userdetails.User(
-        //         user.getEmail(),
-        //         user.getPassword(),
-        //         user.getRoles().stream()
-        //                 .map(SimpleGrantedAuthority::new)
-        //                 .toList()
-        // );
+        // 🔥 MAIN FIX IS HERE 🔥
+        // role is String → NO .name()
+        List<SimpleGrantedAuthority> authorities =
+                user.getRoles().stream()
+                        .map(role -> new SimpleGrantedAuthority(role))
+                        .collect(Collectors.toList());
 
         return new org.springframework.security.core.userdetails.User(
-        user.getEmail(),
-        user.getPassword(),
-        user.getRoles().stream()
-                .map(role -> new SimpleGrantedAuthority(role.name()))
-                .toList()
+                user.getEmail(),
+                user.getPassword(),
+                authorities
         );
-
     }
 }
